<resources>
    <string name="app_name">CoffeeOrder</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="number">2</string>
    <string name="plus">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="price">$10.00</string>
    <string name="order">Order</string>
</resources>
